tests/build/cases/widget_new/not_allowed_in_when1.stderr
error: property `foo` is not allowed in when
  --> $DIR/not_allowed_in_when1.rs:22:19
   |
22 |         when *#foo.is() {
   |                   ^^^
